# freshrss_cli

./: AGENTS.md  LICENSE  README.md  SKILL.md  main.py  pyproject.toml
src/freshrss_cli/: __init__.py  client.py  config.py  main.py
